# UniqueDeep

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS_EN.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mcp_server_config.example.json  models_template.json  pyproject.toml  run.sh
docs/: architecture_sequence.md  langchain_agent_skill.md  skill_introduce.md
examples/: debug_anthropic_stream.py  multi_agent_demo.py
skills/gro-seq-pipeline/: SKILL.md
src/uniquedeep/: __init__.py  agent.py  cli.py  config.py  mcp_client.py  mcp_manager.py  relay_agent.py  relay_cli.py  skill_loader.py  tools.py  ui.py  web_api.py  workflow.py
src/uniquedeep/stream/: __init__.py  emitter.py  formatter.py  state.py  tracker.py  utils.py
tests/: SKILL.md  test_cli.py  test_stream.py  test_tools.py
