[project]
name = "uniquedeep"
version = "0.1.0"
description = "使用 LangChain 构建的具有 Skills 特性的 Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic",
    "langchain-deepseek",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-community",
    "zhipuai",
    "rich",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "mcp",
    "lxml>=6.0.2",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
uniquedeep = "uniquedeep.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uniquedeep"]

[tool.uv.sources]
uniquedeep-agent = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
